--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%svelte.assets%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%svelte.assets%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%svelte.assets%/favicon-16x16.png">
+    <link rel="manifest" href="%svelte.assets%/site.webmanifest">
+    <link rel="mask-icon" href="%svelte.assets%/safari-pinned-tab.svg" color="#ffc40d">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="theme-color" content="#bae3c4">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
