--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body>
+	<body class="bg-gray-900 text-gray-100">
 		<div>%svelte.body%</div>
 	</body>
 </html>
