feat: add DaisyUI for UI elements
Co-authored-by: Tiia Aurora <tiialikespink@gmail.com>

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark-cyan">
 
 <head>
   <meta charset="utf-8" />
@@ -16,7 +16,7 @@
   %svelte.head%
 </head>
 
-<body class="bg-gray-900 text-gray-100">
+<body class="bg-base-100 text-base-content">
   <div>%svelte.body%</div>
 </body>
 
