feat(seo): add metadata to all pages
Includes preview images.

Co-authored-by: Tiia Aurora <tiialikespink@gmail.com>

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="" />
+  <meta name="keywords"
+    content="ARK, ArkUtils, ARK Survival Evolved, Mutations, ColorIDs, Spawn Dinos, ARK Incubator, Event Colors, Dinosaur Game, Survival Game, Sci-Fi Dinosaur Game">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
@@ -11,7 +16,7 @@
   <link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#ffc40d">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#bae3c4">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <script defer data-domain="arkutils.netlify.app" src="https://purr.tiia.rocks/js/plausible.js"></script>
   %sveltekit.head%
 </head>
