--- a/src/app.html
+++ b/src/app.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="keywords"
-    content="ARK, ArkUtils, ARK Survival Evolved, Mutations, ColorIDs, Spawn Dinos, ARK Incubator, Event Colors, Dinosaur Game, Survival Game, Sci-Fi Dinosaur Game">
-  <meta name="robots" content="index, follow">
-  <meta name="language" content="English">
+    content="ARK, ArkUtils, ARK Survival Evolved, Mutations, ColorIDs, Spawn Dinos, ARK Incubator, Event Colors, Dinosaur Game, Survival Game, Sci-Fi Dinosaur Game" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:type" content="website" />
+  <meta name="language" content="English" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
-  <link rel="manifest" href="%sveltekit.assets%/site.webmanifest">
-  <link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#ffc40d">
-  <meta name="msapplication-TileColor" content="#ffc40d">
-  <meta name="theme-color" content="#bae3c4">
+  <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+  <link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+  <link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#ffc40d" />
+  <meta name="msapplication-TileColor" content="#ffc40d" />
+  <meta name="theme-color" content="#bae3c4" />
 
   <script defer data-domain="arkutils.netlify.app" src="https://purr.tiia.rocks/js/plausible.js"></script>
   %sveltekit.head%
