feat: add official server download page
Co-authored-by: Tiia Aurora <tiialikespink@gmail.com>

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta
 			name="keywords"
-			content="ARK, ArkUtils, ARK Survival Evolved, Mutations, ColorIDs, Spawn Dinos, ARK Incubator, Event Colors, Dinosaur Game, Survival Game, Sci-Fi Dinosaur Game"
+			content="ARK, ArkUtils, ARK Survival Evolved, ARK Survival Ascended, Mutations, ColorIDs, Spawn Dinos, ARK Incubator, Event Colors, Dinosaur Game, Survival Game, Sci-Fi Dinosaur Game, Official Server Backup, ASE, ASA"
 		/>
 		<meta name="robots" content="index, follow" />
 		<meta property="og:type" content="website" />
